// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected at large width 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-3 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-7"
            >
              <span
                class="makeStyles-statusDot-12 makeStyles-staging-10"
              />
               
              staging
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-13"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-2"
            >
              to
            </span>
            <span
              class="makeStyles-root-13"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-6"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-6"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-6 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-6"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-14 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-16"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-15"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-15"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-17"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-22"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span
                      class="makeStyles-tooltipped-21"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-20"
                  >
                    <span
                      class="makeStyles-tooltipped-21"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-23"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-23"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-22"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-28"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-29 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-27"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-26"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-26"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-26"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-29 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-27"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-32 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-33"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-35"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-35"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-35"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-22"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            10
            <span
              class="makeStyles-tooltipped-21"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-31 makeStyles-metricName-36"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-31"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-31"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-21"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected at small width 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-38 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-40 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-44"
            >
              <span
                class="makeStyles-statusDot-49 makeStyles-staging-47"
              />
               
              staging
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-50"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-39"
            >
              to
            </span>
            <span
              class="makeStyles-root-50"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-43"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-43"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-43 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-43"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-38 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-51 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-53"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-52"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-52"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-54"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-59"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    <span
                      class="makeStyles-tooltipped-58"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                  >
                    <span
                      class="makeStyles-tooltipped-58"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-60"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-62"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-60"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-62"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-59"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-65"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-66 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-64"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-63"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-63"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-63"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-66 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-64"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-69 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-70"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-72"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-72"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-72"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-68 makeStyles-metricName-73"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-68"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-59"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            
            10
            <span
              class="makeStyles-tooltipped-58"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-68 makeStyles-metricName-73"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-68"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-68 makeStyles-metricName-73"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-68"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-68 makeStyles-metricName-73"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-68"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-68"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-58"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected with conclusion data 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-75 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-77 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title=""
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-81"
            >
              <span
                class="makeStyles-statusDot-86 makeStyles-disabled-85"
              />
               
              disabled
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-87"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-76"
            >
              to
            </span>
            <span
              class="makeStyles-root-87"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-80"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-80"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-80 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-80"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-75 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-88 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Conclusions
      </h3>
      <button
        aria-label="Edit Conclusion"
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
            />
          </svg>
          Edit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Reason the experiment ended
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Ran its course.
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Conclusion URL
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              href="https://betterexperiments.wordpress.com/experiment_1/conclusion"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://betterexperiments.wordpress.com/experiment_1/conclusion
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Deployed variation
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-75 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-90 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-92"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-91"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-91"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-93"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-96"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-98"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-96"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-96"
                  >
                    <span
                      class="makeStyles-tooltipped-97"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-96"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-96"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-96"
                  >
                    <span
                      class="makeStyles-tooltipped-97"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-99"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-101"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-99"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-101"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-98"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-104"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-105 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-103"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-102"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-102"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-102"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-105 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-103"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-108 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title=""
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-109"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-111"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-111"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-111"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-107 makeStyles-metricName-112"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-107"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-98"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            
            10
            <span
              class="makeStyles-tooltipped-97"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-107 makeStyles-metricName-112"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-107"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-107 makeStyles-metricName-112"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-107"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-107 makeStyles-metricName-112"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-107"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-107"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-97"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`renders as expected without conclusion data 1`] = `
<div>
  <div
    class="MuiPaper-root makeStyles-panel-114 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-116 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        General
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          aria-label="Edit Experiment General Data"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
              />
            </svg>
            Edit
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Status
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-120"
            >
              <span
                class="makeStyles-statusDot-125 makeStyles-staging-123"
              />
               
              staging
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Dates
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-root-126"
              title="20/09/2020, 20:00:00"
            >
              2020-09-21
            </span>
            <span
              class="makeStyles-to-115"
            >
              to
            </span>
            <span
              class="makeStyles-root-126"
              title="20/11/2020, 19:00:00"
            >
              2020-11-21
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Description
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-119"
            >
              Experiment with things. Change stuff. Profit.
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Owner
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-119"
            >
              owner-nickname
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            P2 Link
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-monospace-119 MuiTypography-colorPrimary"
              href="https://wordpress.com/experiment_1"
              rel="noopener noreferrer"
              target="_blank"
            >
              https://wordpress.com/experiment_1
            </a>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Assignment Cache Entry
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-119"
            >
              ✅ Fresh: Production cache is up to date, but manual sandbox updates may be needed
               (
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways MuiTypography-colorPrimary"
                rel="noopener noreferrer"
                target="_blank"
              >
                learn more
              </a>
              )
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root makeStyles-panel-114 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-127 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Audience
      </h3>
    </div>
    <table
      class="MuiTable-root makeStyles-audienceTable-129"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Platform
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-128"
            >
              calypso
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            User Type
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <span
              class="makeStyles-monospace-128"
            >
              Newly signed up users (being also logged in)
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Variations
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-130"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Percent
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Manual Assignment
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-133"
                  >
                    <span>
                      control
                    </span>
                    <br />
                    <span
                      class="makeStyles-root-135"
                    >
                      default
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-133"
                  >
                    60
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-133"
                  >
                    <span
                      class="makeStyles-tooltipped-134"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-133"
                  >
                    <span>
                      test
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-133"
                  >
                    40
                    %
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-133"
                  >
                    <span
                      class="makeStyles-tooltipped-134"
                    >
                      Bookmarklet
                    </span>
                     
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Segments
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <table
              class="MuiTable-root makeStyles-root-136"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Locales
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-138"
                  >
                    segment_1
                     
                  </td>
                </tr>
              </tbody>
            </table>
            <table
              class="MuiTable-root makeStyles-root-136"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Countries
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-138"
                  >
                    segment_2
                     
                    <span
                      class="makeStyles-root-135"
                    >
                      excluded
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exposure Events
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              class="makeStyles-eventList-141"
            >
              <p
                class="MuiTypography-root makeStyles-monospace-142 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-140"
                  title="event_name"
                >
                  event_name
                </span>
                <span
                  class="makeStyles-entry-139"
                >
                  additionalProp1
                  : 
                  prop1Value
                </span>
                <span
                  class="makeStyles-entry-139"
                >
                  additionalProp2
                  : 
                  prop2Value
                </span>
                <span
                  class="makeStyles-entry-139"
                >
                  additionalProp3
                  : 
                  prop3Value
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-monospace-142 MuiTypography-body1"
              >
                <span
                  class="makeStyles-eventName-140"
                  title="event_without_props"
                >
                  event_without_props
                </span>
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="cell"
            scope="row"
          >
            Exclusion Groups
          </th>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <div
              aria-disabled="true"
              class="MuiChip-root Mui-disabled"
            >
              <span
                class="MuiChip-label"
              >
                tag_1
              </span>
            </div>
             
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <h3
        class="MuiTypography-root makeStyles-title-145 MuiTypography-h3 MuiTypography-colorTextPrimary"
      >
        Metrics
      </h3>
      <div
        class=""
        title="Use \\"Edit in Wizard\\" for staging experiments."
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
              />
            </svg>
            Assign Metric
          </span>
        </button>
      </div>
    </div>
    <table
      class="MuiTable-root makeStyles-metricsTable-146"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            role="columnheader"
            scope="col"
          >
            Name
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-148"
            role="columnheader"
            scope="col"
          >
            Attribution Window
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-148"
            role="columnheader"
            scope="col"
          >
            Changes Expected
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head makeStyles-smallColumn-148"
            role="columnheader"
            scope="col"
          >
            Minimum Difference
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-144 makeStyles-metricName-149"
              title="metric_1"
            >
              metric_1
            </strong>
            <br />
            <small
              class="makeStyles-monospace-144"
            >
              This is metric 1
            </small>
            <br />
            <span
              class="makeStyles-root-135"
            >
              primary
            </span>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            1 week
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            
            10
            <span
              class="makeStyles-tooltipped-134"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-144 makeStyles-metricName-149"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-144"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            1 hour
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            
            0.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-144 makeStyles-metricName-149"
              title="metric_2"
            >
              metric_2
            </strong>
            <br />
            <small
              class="makeStyles-monospace-144"
            >
              This is metric 2
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            4 weeks
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            No
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            
            10.50
             USD
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <strong
              class="makeStyles-monospace-144 makeStyles-metricName-149"
              title="metric_3"
            >
              metric_3
            </strong>
            <br />
            <small
              class="makeStyles-monospace-144"
            >
              This is metric 3
            </small>
            <br />
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            6 hours
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            Yes
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-144"
          >
            
            1200
            <span
              class="makeStyles-tooltipped-134"
              title="Percentage points."
            >
              pp
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
